Revision history for Perl extension AnyEvent.

TODO: release a:i 1.0
	- normalise signal numbers to names when using the ae's
          signal handling, but do not document this (yet).

4.881 Tue Jul 28 12:51:53 CEST 2009
	- work around a bug in local in pre-5.10 perls, causing
          AnyEvent::Handle to recurse when it should not
          (analyzed by elmex).

4.88 Tue Jul 28 04:04:37 CEST 2009
	- re-bless the handle into a dummy package after calling
          AnyEvent::Handle::destroy, so the user does not need to check
          for errors after every push_write etc.
        - do not attempt to run t/02_signals.t on obviously broken
          platforms.

4.87 Sun Jul 26 02:06:16 CEST 2009
	- do not attempt to linger when there is no longer a valid fh.
        - enforce tls mode to be either accept or connect, do not simply
          segfault in Net::SSLeay.
        - AnyEvent::Handle can now call tcp_connect itself (new parameters
          connect, on_prepare, on_connect and on_connect_error). Updated
          tutorial accordingly.
	- add AnyEvent::Impl::Irssi backend.

4.86 Mon Jul 20 23:52:29 CEST 2009
	- since the verbose warning is not enough, explicitly document
          that versions before 1.33 of Net::SSLeay are not secure.
	- work around signal handling races in Event and (...) Event::Lib.
        - try to align signal-race timer to full-second boundaries.
        - work around Tk not liking negative timeouts.
        - don't complain of different grades of environmental unfriendlyness
          in IO::Async.

4.85 Sat Jul 18 06:16:14 CEST 2009
        - nail the signal race problem in perl once and for all
          (see $AnyEvent::MAX_SIGNAL_LATENCY).
        - take advantage of Async::Interrupt if it is available.
        - load Time::HiRes and Guard modules on demand only.
        - add optional/recommended modules section to AnyEvent
          documentation.
        - reduce memory usage considerably (and reduce startup penalty)